--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,12 @@
+  <script id="country-template" type="text/x-handlebars-template">
+    <div>
+      <p>
+        <span class="flag {{abbreviation}}"></span> {{name}} ({{abbreviation}})
+      </p>
+    </div>
+  </script>
 
+  <!-- bonus exercise 1 -->
   <script id="country-template" type="text/x-handlebars-template">
     <div>
       <p {{#if north_america}} class="na" {{/if}}>
@@ -6,23 +14,26 @@
       </p>
     </div>
   </script>
+  <!-- end bonus exercise 1 -->
 
-  <script id="data-template" type="text/x-handlebars-template">
+  <script id="all-template" type="text/x-handlebars-template">
     {{#each countries}}
       {{> country}}
     {{/each}}
   </script>
 
-  <script>
-    var countryTemplate = function() {
-      return '<div><p {{#if north_america}} class="na" {{/if}}><span class="flag {{abbreviation}}"></span> {{name}} ({{abbreviation}})</p></div>';
-    }
-  </script>
 
 
   <div id="center-content">
     <h1>Countries of the world</h1>
-    <p><input type="text" id="step-input" size="3" maxlength="3" value="5"> at a time <input type="button" value="Populate" id="populate-button"> <input type="button" value="Reset" id="reset-button"> <input type="button" value="Data Template" id="data-button"></p>
+    <p>
+      <input type="text" id="step-input" size="3" maxlength="3" value="5"> at a time 
+      <input type="button" value="Populate" id="populate-button"> 
+      <input type="button" value="Reset" id="reset-button"> 
+      <input type="button" value="All Data" id="all-button">
+    </p>
 
-    <div id="content" class="f32"></div>
+    <div id="content" class="f32">
+    </div>
+
   </div>
